2014-08-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick: VisualMagick fixes by Dirk Lemstra to improve
	configure program so that it is possible to select QuantumDepth,
	OpenMP, and 64-bit build via configure dialog boxes as well as
	options on the command line.  Also automatically detects and deals
	with similarly named files in subdirectories so that WebP support
	can now build successfully.  Resolves SF patches 31, 33, 35, 37,
	and 38.

2014-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (NTResourceToBlob): Support loading mgk files
	as Windows resource from library if MagickLibName is defined.
	Patch contributed by Dirk Lemstra via SF patch #32.
	(NTGhostscriptDLL): For Microsoft Windows, add support for a
	MAGICK_GHOSTSCRIPT_PATH environment variable which specifies the
	path to Ghostscript.  If this environment variable is defined,
	then the Windows registry is not used to find Ghostscript.  Patch
	contributed by Dirk Lemstra via SF patch #39.

	* magick/log.c: Added SetLogMethod() to allow an
	application/library to specify a function to be called for
	logging.  Patch contributed by Dirk Lemstra.

2014-07-20  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/bmp.c: "opacity" read from a BMP3 is actually "alpha",
	so store q->opacity=MaxRGB-opacity instead of q->opacity=opacity.
	Reference: Bug tracker [bugs:#271] Blank result for BMP resize.

2014-07-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* webp, VisualMagick/webp: Integrate webp 0.4.0 into windows
	build.  May require manual renaming of output object files in
	project files to build webp until VisualMagick configure is
	improved!

2014-07-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/composite.c: fmin() and fmax() are defined by C'99 and
	not available everywhere, so add and use MagickFmin() and
	MagickFmax() to improve portability.

2014-07-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
